appId: ca.psiphon.conduit.perf
---
- extendedWaitUntil:
      visible:
          id: "app-ready"
      timeout: 180000
- runFlow:
      when:
          visible:
              id: "onboarding-next"
      commands:
          - tapOn:
                id: "onboarding-next"
                optional: true
          - waitForAnimationToEnd:
                timeout: 2000
- runFlow:
      when:
          visible:
              id: "onboarding-next"
      commands:
          - tapOn:
                id: "onboarding-next"
                optional: true
          - waitForAnimationToEnd:
                timeout: 2000
- runFlow:
      when:
          visible:
              id: "onboarding-next"
      commands:
          - tapOn:
                id: "onboarding-next"
                optional: true
          - waitForAnimationToEnd:
                timeout: 2000
- runFlow:
      when:
          visible:
              id: "onboarding-next"
      commands:
          - tapOn:
                id: "onboarding-next"
                optional: true
          - waitForAnimationToEnd:
                timeout: 2000
- runFlow:
      when:
          visible:
              id: "onboarding-next"
      commands:
          - tapOn:
                id: "onboarding-next"
                optional: true
          - waitForAnimationToEnd:
                timeout: 2000
- runFlow:
      when:
          visible:
              id: "onboarding-next"
      commands:
          - tapOn:
                id: "onboarding-next"
                optional: true
          - waitForAnimationToEnd:
                timeout: 2000
